@@ -199,7 +199,7 @@ backsql_add_sysmaps( backsql_info *bi, backsql_oc_map_rec *oc_map )
 	struct berbuf		bb;
 	
 	sbv.bv_val = s;
-	sbv.bv_len = snprintf( s, sizeof( s ), "%ld", oc_map->bom_id );
+	sbv.bv_len = snprintf( s, sizeof( s ), BACKSQL_IDNUMFMT, oc_map->bom_id );
 
 	/* extra objectClasses */
 	at_map = (backsql_at_map_rec *)ch_calloc(1, 
@@ -242,7 +242,7 @@ backsql_add_sysmaps( backsql_info *bi, backsql_oc_map_rec *oc_map )
 			"INSERT INTO ldap_entry_objclasses "
 			"(entry_id,oc_name) VALUES "
 			"((SELECT id FROM ldap_entries "
-			"WHERE oc_map_id=%lu "
+			"WHERE oc_map_id=" BACKSQL_IDNUMFMT " "
 			"AND keyval=?),?)", oc_map->bom_id );
 		at_map->bam_add_proc = ch_strdup( tmp );
 	}
@@ -256,7 +256,7 @@ backsql_add_sysmaps( backsql_info *bi, backsql_oc_map_rec *oc_map )
 		snprintf( tmp, sizeof(tmp), 
 			"DELETE FROM ldap_entry_objclasses "
 			"WHERE entry_id=(SELECT id FROM ldap_entries "
-			"WHERE oc_map_id=%lu "
+			"WHERE oc_map_id=" BACKSQL_IDNUMFMT " "
 			"AND keyval=?) AND oc_name=?",
 			oc_map->bom_id );
 		at_map->bam_delete_proc = ch_strdup( tmp );
@@ -297,7 +297,7 @@ struct backsql_attr_schema_info {
 	backsql_info	*bas_bi;
 	SQLHDBC		bas_dbh;
 	SQLHSTMT	bas_sth;
-	unsigned long	*bas_oc_id;
+	backsql_key_t	*bas_oc_id;
 	int		bas_rc;
 };
 
@@ -317,7 +317,7 @@ backsql_oc_get_attr_mapping( void *v_oc, void *v_bas )
 		"executing at_query\n"
 		"    \"%s\"\n"
 		"    for objectClass \"%s\"\n"
-		"    with param oc_id=\"%lu\"\n",
+		"    with param oc_id=" BACKSQL_IDNUMFMT "\n",
 		bas->bas_bi->sql_at_query,
 		BACKSQL_OC_NAME( oc_map ),
 		*bas->bas_oc_id );
@@ -328,7 +328,7 @@ backsql_oc_get_attr_mapping( void *v_oc, void *v_bas )
 			"error executing at_query\n"
 			"    \"%s\"\n"
 			"    for objectClass \"%s\"\n"
-			"    with param oc_id=\"%lu\"\n",
+			"    with param oc_id=" BACKSQL_IDNUMFMT "\n",
 			bas->bas_bi->sql_at_query,
 			BACKSQL_OC_NAME( oc_map ),
 			*bas->bas_oc_id );
@@ -503,7 +503,7 @@ backsql_load_schema_map( backsql_info *bi, SQLHDBC dbh )
 	SQLHSTMT 			sth = SQL_NULL_HSTMT;
 	RETCODE				rc;
 	BACKSQL_ROW_NTS			oc_row;
-	unsigned long			oc_id;
+	backsql_key_t			oc_id;
 	backsql_oc_map_rec		*oc_map;
 	struct backsql_attr_schema_info	bas;
 
@@ -569,10 +569,12 @@ backsql_load_schema_map( backsql_info *bi, SQLHDBC dbh )
 				{ 1, "name" },
 				{ 2, "keytbl" },
 				{ 3, "keycol" },
-				{ delete_proc_idx + 1, "expect_return" },
+				{ -1, "expect_return" },
 				{ -1, NULL },
 			};
 			int i;
+
+			required[4].idx = delete_proc_idx + 1;
 
 			for ( i = 0; required[ i ].name != NULL; i++ ) {
 				if ( oc_row.value_len[ required[ i ].idx ] <= 0 ) {
@@ -614,7 +616,7 @@ backsql_load_schema_map( backsql_info *bi, SQLHDBC dbh )
 		oc_map = (backsql_oc_map_rec *)ch_calloc( 1,
 				sizeof( backsql_oc_map_rec ) );
 
-		if ( lutil_atoulx( &oc_map->bom_id, oc_row.cols[ 0 ], 0 ) != 0 ) {
+		if ( BACKSQL_STR2ID( &oc_map->bom_id, oc_row.cols[ 0 ], 0 ) != 0 ) {
 			Debug( LDAP_DEBUG_TRACE, "backsql_load_schema_map(): "
 				"unable to parse id=\"%s\"\n", 
 				oc_row.cols[ 0 ], 0, 0 );
@@ -730,7 +732,7 @@ backsql_load_schema_map( backsql_info *bi, SQLHDBC dbh )
 		return LDAP_OTHER;
 	}
 
-	rc = backsql_BindParamInt( sth, 1, SQL_PARAM_INPUT, &oc_id );
+	rc = backsql_BindParamNumID( sth, 1, SQL_PARAM_INPUT, &oc_id );
 	if ( rc != SQL_SUCCESS ) {
 		Debug( LDAP_DEBUG_TRACE, "backsql_load_schema_map(): "
 			"error binding param \"oc_id\" for at_query\n", 0, 0, 0 );
